Unify card headers and add CustomCard

--- a/packages/admin-dashboard/src/locales/pl/collections.json
+++ b/packages/admin-dashboard/src/locales/pl/collections.json
@@ -18,11 +18,11 @@
         "featuredAsset": "Obraz",
         "breadcrumb": "Ścieżka",
         "slug": "Ślimak",
-        "children": "# Liczba dzieci",
+        "children": "Liczba dzieci",
         "collections": "W kolekcjach",
         "actions": "Działania",
         "copyId": "Kopiuj id",
-        "products": "# liczba produktów",
+        "products": "liczba produktów",
         "delete": "Usuń kolekcję"
     },
     "details": {
