Add order changes

--- a/packages/admin-dashboard/src/locales/en/orders.json
+++ b/packages/admin-dashboard/src/locales/en/orders.json
@@ -324,7 +324,7 @@
         "status": "Status",
         "method": "Method",
         "created": "Created",
-        "cancel": "Cancel",
+        "cancel": "Cancel payment",
         "amount": "Amount",
         "extra": "Additional",
         "actions": "Activities",
