--- a/packages/admin-dashboard/src/locales/pl/orders.json
+++ b/packages/admin-dashboard/src/locales/pl/orders.json
@@ -324,7 +324,7 @@
         "status": "Status",
         "method": "Metoda",
         "created": "Utworzony",
-        "cancel": "Anuluj",
+        "cancel": "Anuluj płatność",
         "amount": "Kwota",
         "extra": "Dodatkowa",
         "actions": "Działania",
