--- a/packages/admin-dashboard/src/locales/pl/table.json
+++ b/packages/admin-dashboard/src/locales/pl/table.json
@@ -1,189 +1,189 @@
 {
-    "types": {
-        "filter": "Typ filtra",
-        "select": "Wybierz typ"
-    },
-    "withSelected": "Po wybraniu {{amount}}",
-    "clearSelected": "Usuń zaznaczenie",
-    "removeSelected": "Usuń zaznaczone",
-    "true": "Prawda",
-    "false": "Fałsz",
-    "from": "Od",
-    "to": "Do",
-    "value": "Wartość",
-    "create": "Utwórz",
-    "bulk": {
-        "delete": {
-            "title": "Czy na pewno chcesz usunąć te rekordy?",
-            "description": "Tej czynności nie można cofnąć.",
-            "cancel": "Anuluj",
-            "confirm": "Usuń {{amount}} rekordów"
-        }
-    },
-    "filterLabels": {
-        "active": "Aktywny",
-        "additionalInformation": "Dodatkowe informacje",
-        "code": "Kod",
-        "createdAt": "Utworzona w",
-        "currencyCode": "Kod waluty",
-        "customerLastName": "Nazwisko klienta",
-        "id": "Id",
-        "orderPlacedAt": "Zamówienie złożone pod adresem",
-        "shipping": "Wysyłka",
-        "shippingWithTax": "Wysyłka z podatkiem",
-        "state": "Stan",
-        "subTotal": "Suma cząstkowa",
-        "subTotalWithTax": "Suma częściowa z podatkiem",
-        "token": "Token",
-        "total": "suma",
-        "totalQuantity": "Całkowita ilość",
-        "totalWithTax": "Razem z podatkiem",
-        "transactionId": "Identyfikator transakcji",
-        "type": "Typ",
-        "updatedAt": "Zaktualizowano o",
-        "aggregateOrderId": "Zagregowany identyfikator zamówienia",
-        "getProforma": "Pobierz proformę",
-        "registeredOnCheckout": "Zarejestrowany przy kasie",
-        "enabled": "Włączone",
-        "name": "Nazwa",
-        "firstName": "Imię",
-        "phoneNumber": "Numer telefonu",
-        "emailAddress": "Adres e-mail",
-        "slug": "Ślimak",
-        "description": "Opis",
-        "isPrivate": "Jest prywatny",
-        "inheritFilters": "Dziedziczenie filtrów",
-        "position": "Pozycja",
-        "parentId": "Identyfikator rodzica",
-        "usedForProductCreations": "Jest używany do tworzenia produktów",
-        "usedForColors": "Jest używany dla kolorów",
-        "colorsCollection": "Jest kolekcją kolorów",
-        "zone": "Strefa",
-        "value": "Stawka",
-        "customerGroup": "Grupa klientów",
-        "category": "Kategoria",
-        "modalTitle": "Tytuł modalny",
-        "_and": "oraz",
-        "_or": "lub"
-    },
-    "buttons": {
-        "add": "Dodaj",
-        "apply": "Zastosuj",
-        "create": "Utwórz",
-        "reset": "Reset",
-        "cancel": "Anuluj"
-    },
-    "operators": {
-        "eq": "Równa się",
-        "in": "W",
-        "notIn": "Nie w",
-        "isNull": "Is null",
-        "notEq": "Nie jest równa",
-        "contains": "Zawiera",
-        "notContains": "Nie zawiera",
-        "before": "Przed",
-        "regex": "Pasuje do wyrażenia regularnego",
-        "after": "Po",
-        "between": "Pomiędzy",
-        "lt": "Niższy niż",
-        "lte": "Niższy lub równy",
-        "gt": "Większy niż",
-        "gte": "Większy lub równy"
-    },
-    "placeholders": {
-        "columnsDropdown": "Wybierz kolumny",
-        "operatorInput": "Wartość wejściowa",
-        "search": "Wyszukiwanie w {{entity}} przez {{fields}}"
-    },
-    "columns": {
-        "id": "ID",
-        "createdAt": "Utworzona w",
-        "updatedAt": "Zaktualizowano o",
-        "featuredAsset": "Aktywa",
-        "name": "Nazwa",
-        "slug": "Ślimak",
-        "enabled": "Włączone",
-        "sku": "SKU",
-        "description": "Opis",
-        "channels": "Kanały",
-        "permissions": "Uprawnienia",
-        "price": "Cena",
-        "priceWithTax": "Cena z podatkiem",
-        "verified": "Zweryfikowany",
-        "fullName": "Imię i nazwisko",
-        "payments": "Płatności",
-        "shippingAddress": "Adres wysyłki",
-        "customer": "Klient",
-        "state": "Stan",
-        "totalWithTax": "Razem",
-        "code": "Kod",
-        "total": "Razem",
-        "type": "Typ",
-        "shipping": "Dostawa",
-        "orderPlacedAt": "Złożony o",
-        "firstName": "Imię",
-        "lastName": "Nazwisko",
-        "emailAddress": "Email",
-        "phoneNumber": "Nr tel.",
-        "values": "Wartości",
-        "isPrivate": "Prywatny",
-        "token": "Token",
-        "members": "Członkowie",
-        "isDefault": "Domyślna",
-        "value": "Wartość",
-        "customerGroup": "Grupa klientów",
-        "taxCategory": "Kategoria podatkowa",
-        "zone": "Strefa",
-        "active": "Aktywny",
-        "currencyCode": "Waluta",
-        "totalQuantity": "Liczba",
-        "postalCode": "Kod pocztowy",
-        "image": "Obraz"
-    },
-    "actionsMenu": {
-        "title": "Działania",
-        "open": "Otwarte",
-        "copyId": "Kopiuj ID",
-        "view": "Widok",
-        "delete": "Usuń"
-    },
-    "filterDialog": {
-        "title": "Filtry",
-        "apply": "Zastosuj filtr",
-        "reset": "Zresetuj filtry",
-        "add": "Dodaj filtr",
-        "allFiltersApplied": "Wszystkie filtry zostały już zastosowane",
-        "where": "gdzie",
-        "noFieldsFound": "Nie znaleziono pól",
-        "searchFields": "Wyszukaj",
-        "noFiltersApplied": "Nie zastosowano żadnych filtrów",
-        "emptyState": "Dodaj filtry, aby zawęzić wyniki.",
-        "operatorPlaceholder": "Operator wyboru"
-    },
-    "entities": {
-        "administrator": "administrator",
-        "product": "produkty",
-        "customer": "klienci",
-        "customerGroup": "grupy klientów",
-        "customerGroupList": "grupy klientów",
-        "productVariant": "warianty produktów",
-        "collection": "kolekcje",
-        "order": "zamówienia",
-        "facet": "aspekty",
-        "channel": "kanały",
-        "globalSettings": "ustawienia globalne",
-        "role": "role",
-        "admin": "administratorzy",
-        "stock": "lokalizacje magazynowe",
-        "seller": "sprzedawcy",
-        "asset": "aktywa",
-        "zone": "strefy",
-        "promotion": "promocje",
-        "country": "kraje",
-        "paymentMethod": "metody płatności",
-        "shippingMethod": "metody wysyłki",
-        "taxCategory": "kategorie podatkowe",
-        "taxRate": "stawki podatkowe",
-        "stockLocation": "lokacje magazynowe"
+  "types": {
+    "filter": "Typ filtra",
+    "select": "Wybierz typ"
+  },
+  "withSelected": "Po wybraniu {{amount}}",
+  "clearSelected": "Usuń zaznaczenie",
+  "removeSelected": "Usuń zaznaczone",
+  "true": "Prawda",
+  "false": "Fałsz",
+  "from": "Od",
+  "to": "Do",
+  "value": "Wartość",
+  "create": "Utwórz",
+  "bulk": {
+    "delete": {
+      "title": "Czy na pewno chcesz usunąć te rekordy?",
+      "description": "Tej czynności nie można cofnąć.",
+      "cancel": "Anuluj",
+      "confirm": "Usuń {{amount}} rekordów"
     }
+  },
+  "filterLabels": {
+    "active": "Aktywny",
+    "additionalInformation": "Dodatkowe informacje",
+    "code": "Kod",
+    "createdAt": "Utworzona w",
+    "currencyCode": "Kod waluty",
+    "customerLastName": "Nazwisko klienta",
+    "id": "Id",
+    "orderPlacedAt": "Zamówienie złożone pod adresem",
+    "shipping": "Wysyłka",
+    "shippingWithTax": "Wysyłka z podatkiem",
+    "state": "Stan",
+    "subTotal": "Suma cząstkowa",
+    "subTotalWithTax": "Suma częściowa z podatkiem",
+    "token": "Token",
+    "total": "suma",
+    "totalQuantity": "Całkowita ilość",
+    "totalWithTax": "Razem z podatkiem",
+    "transactionId": "Identyfikator transakcji",
+    "type": "Typ",
+    "updatedAt": "Zaktualizowano o",
+    "aggregateOrderId": "Zagregowany identyfikator zamówienia",
+    "getProforma": "Pobierz proformę",
+    "registeredOnCheckout": "Zarejestrowany przy kasie",
+    "enabled": "Włączone",
+    "name": "Nazwa",
+    "firstName": "Imię",
+    "phoneNumber": "Numer telefonu",
+    "emailAddress": "Adres e-mail",
+    "slug": "Ślimak",
+    "description": "Opis",
+    "isPrivate": "Jest prywatny",
+    "inheritFilters": "Dziedziczenie filtrów",
+    "position": "Pozycja",
+    "parentId": "Identyfikator rodzica",
+    "usedForProductCreations": "Jest używany do tworzenia produktów",
+    "usedForColors": "Jest używany dla kolorów",
+    "colorsCollection": "Jest kolekcją kolorów",
+    "zone": "Strefa",
+    "value": "Stawka",
+    "customerGroup": "Grupa klientów",
+    "category": "Kategoria",
+    "modalTitle": "Tytuł modalny",
+    "_and": "oraz",
+    "_or": "lub"
+  },
+  "buttons": {
+    "add": "Dodaj",
+    "apply": "Zastosuj",
+    "create": "Utwórz",
+    "reset": "Reset",
+    "cancel": "Anuluj"
+  },
+  "operators": {
+    "eq": "Równa się",
+    "in": "W",
+    "notIn": "Nie w",
+    "isNull": "Is null",
+    "notEq": "Nie jest równa",
+    "contains": "Zawiera",
+    "notContains": "Nie zawiera",
+    "before": "Przed",
+    "regex": "Pasuje do wyrażenia regularnego",
+    "after": "Po",
+    "between": "Pomiędzy",
+    "lt": "Niższy niż",
+    "lte": "Niższy lub równy",
+    "gt": "Większy niż",
+    "gte": "Większy lub równy"
+  },
+  "placeholders": {
+    "columnsDropdown": "Wybierz kolumny",
+    "operatorInput": "Wartość wejściowa",
+    "search": "Wyszukiwanie przez {{fields}}"
+  },
+  "columns": {
+    "id": "ID",
+    "createdAt": "Utworzona w",
+    "updatedAt": "Zaktualizowano o",
+    "featuredAsset": "Aktywa",
+    "name": "Nazwa",
+    "slug": "Ślimak",
+    "enabled": "Włączone",
+    "sku": "SKU",
+    "description": "Opis",
+    "channels": "Kanały",
+    "permissions": "Uprawnienia",
+    "price": "Cena",
+    "priceWithTax": "Cena z podatkiem",
+    "verified": "Zweryfikowany",
+    "fullName": "Imię i nazwisko",
+    "payments": "Płatności",
+    "shippingAddress": "Adres wysyłki",
+    "customer": "Klient",
+    "state": "Stan",
+    "totalWithTax": "Razem",
+    "code": "Kod",
+    "total": "Razem",
+    "type": "Typ",
+    "shipping": "Dostawa",
+    "orderPlacedAt": "Złożony o",
+    "firstName": "Imię",
+    "lastName": "Nazwisko",
+    "emailAddress": "Email",
+    "phoneNumber": "Nr tel.",
+    "values": "Wartości",
+    "isPrivate": "Prywatny",
+    "token": "Token",
+    "members": "Członkowie",
+    "isDefault": "Domyślna",
+    "value": "Wartość",
+    "customerGroup": "Grupa klientów",
+    "taxCategory": "Kategoria podatkowa",
+    "zone": "Strefa",
+    "active": "Aktywny",
+    "currencyCode": "Waluta",
+    "totalQuantity": "Liczba",
+    "postalCode": "Kod pocztowy",
+    "image": "Obraz"
+  },
+  "actionsMenu": {
+    "title": "Działania",
+    "open": "Otwarte",
+    "copyId": "Kopiuj ID",
+    "view": "Widok",
+    "delete": "Usuń"
+  },
+  "filterDialog": {
+    "title": "Filtry",
+    "apply": "Zastosuj filtr",
+    "reset": "Zresetuj filtry",
+    "add": "Dodaj filtr",
+    "allFiltersApplied": "Wszystkie filtry zostały już zastosowane",
+    "where": "gdzie",
+    "noFieldsFound": "Nie znaleziono pól",
+    "searchFields": "Wyszukaj",
+    "noFiltersApplied": "Nie zastosowano żadnych filtrów",
+    "emptyState": "Dodaj filtry, aby zawęzić wyniki.",
+    "operatorPlaceholder": "Operator wyboru"
+  },
+  "entities": {
+    "administrator": "administrator",
+    "product": "produkty",
+    "customer": "klienci",
+    "customerGroup": "grupy klientów",
+    "customerGroupList": "grupy klientów",
+    "productVariant": "warianty produktów",
+    "collection": "kolekcje",
+    "order": "zamówienia",
+    "facet": "aspekty",
+    "channel": "kanały",
+    "globalSettings": "ustawienia globalne",
+    "role": "role",
+    "admin": "administratorzy",
+    "stock": "lokalizacje magazynowe",
+    "seller": "sprzedawcy",
+    "asset": "aktywa",
+    "zone": "strefy",
+    "promotion": "promocje",
+    "country": "kraje",
+    "paymentMethod": "metody płatności",
+    "shippingMethod": "metody wysyłki",
+    "taxCategory": "kategorie podatkowe",
+    "taxRate": "stawki podatkowe",
+    "stockLocation": "lokacje magazynowe"
+  }
 }
