--- a/packages/admin-dashboard/src/locales/pl/customers.json
+++ b/packages/admin-dashboard/src/locales/pl/customers.json
@@ -79,8 +79,8 @@
         "phoneNumberShort": "tel.{{value}}",
         "defaultBilling": "Domyślny adres rozliczeniowy",
         "defaultShipping": "Domyślny adres wysyłki",
-        "isDefaultBilling": "Domyślny adres wysyłki klienta",
-        "isDefaultShipping": "Domyślny adres rozliczeniowy klienta",
+        "isDefaultBilling": "Domyślny adres wysyłki",
+        "isDefaultShipping": "Domyślny adres rozliczeniowy",
         "createForCustomer": "Utwórz dla klienta",
         "inputNameLabel": "Imię i nazwisko",
         "inputNamePlaceholder": "Imię i nazwisko",
