--- a/packages/admin-dashboard/src/locales/pl/orders.json
+++ b/packages/admin-dashboard/src/locales/pl/orders.json
@@ -62,11 +62,296 @@
     "openMenu": "Otwórz menu",
     "actions": "Działania",
     "copyId": "Kopiuj identyfikator zamówienia",
-    "deleteDraft": "Usuń wersję roboczą zamówienia",
     "viewCustomer": "Wyświetl klienta",
     "viewPayment": "Wyświetlanie szczegółów płatności",
     "viewOrder": "Wyświetl zamówienie",
     "paymentMethod": "Typ płatności",
+    "add": "Dodaj zamówienie",
+    "applyChanges": "Zastosuj zmiany",
+    "reviewChanges": "Przejrzyj zmiany",
+    "note": "Dodaj notatkę",
+    "noChanges": "Bez zmian",
+    "previous": "Poprzedni",
+    "current": "Bieżący",
+    "disabledBtnTooltip": "Należy wprowadzić notatkę",
+    "modifySuccess": "Zamówienie zostało pomyślnie zmodyfikowane",
+    "image": "obraz",
+    "name": "nazwa",
+    "slug": "ślimak",
+    "variants": "warianty",
+    "enabled": "włączony",
+    "copied": "Tekst skopiowany do schowka",
+    "noFilterField": "Brak",
+    "columns": "Kolumny",
+    "deleteOrCancel": "Wybrano opcję Usuń/Anuluj",
+    "selectedValue": "wybrano {{from}} z {{to}} wierszy",
+    "discountByValue": "Zniżka {{value}}",
+    "editOptions": "Edytuj opcje",
+    "total": "Razem",
+    "totalItems": "Łączna cena {{value}} produktów",
+    "deleteDraft": {
+      "button": "Usuń wersję roboczą",
+      "title": "Czy na pewno?",
+      "descriptionDraft": "Następujące wersje robocze zleceń zostaną trwale usunięte:",
+      "descriptionOrder": "Następujące zamówienia zostaną anulowane:",
+      "confirm": "Usuń wersję roboczą",
+      "cancel": "Anuluj"
+    },
+    "searchProduct": {
+      "id": "ID",
+      "image": "Obraz",
+      "name": "Nazwa",
+      "price": "Cena",
+      "action": "Działanie",
+      "placeholder": "Wpisz, aby wyszukać produkty..."
+    },
+    "forms": {
+      "create": "Utwórz zamówienie",
+      "update": "Aktualizuj zamówienie"
+    },
+    "filterField": {
+      "customerLastName": "Nazwisko klienta",
+      "transactionId": "Identyfikator transakcji",
+      "id": "Identyfikator zamówienia",
+      "code": "Kod zamówienia"
+    },
+    "table": {
+      "id": "ID",
+      "firstName": "Imię",
+      "lastName": "Nazwisko",
+      "state": "Stan",
+      "emailAddress": "Adres e-mail",
+      "code": "Kod",
+      "createdAt": "Utworzono w",
+      "placedAt": "Umieszczono w",
+      "shipping": "Wysyłka",
+      "updatedAt": "Zaktualizowano w",
+      "openMenu": "Otwórz menu",
+      "actions": "Działania",
+      "copyId": "Kopiuj identyfikator zamówienia",
+      "deleteDraft": "Usuń wersję roboczą zamówienia",
+      "viewCustomer": "Wyświetl klienta",
+      "viewPayment": "Wyświetlanie szczegółów płatności",
+      "viewOrder": "Wyświetl zamówienie",
+      "paymentMethod": "Typ płatności",
+      "phoneNumber": "Numer telefonu",
+      "type": "Typ",
+      "totalWithTax": "Razem z podatkiem",
+      "realization": "Realizacja"
+    },
+    "filterPlaceholder": "Pole dla filtra",
+    "createOrder": "Utwórz zamówienie",
+    "create": {
+      "addModal": {
+        "discount": "Rabat do sumy w {{value}}",
+        "discountAmount": "Kwota rabatu",
+        "quantity": "Ilość",
+        "quantityPlaceholder": "Ilość"
+      },
+      "perUnit": "Za jednostkę (TAX)",
+      "baseInfoCode": "Kod: {{value}}",
+      "realizationPlan": "Planowana realizacja: {{value}}",
+      "realizationDate": "Termin realizacji: {{value}}",
+      "finalAmount": "Kwota końcowa: {{value}}",
+      "baseInfoUpdated": "Zaktualizowano: {{value}}",
+      "baseInfoCreated": "Utworzono: {{value}}",
+      "orderId": "Zamówienie #{{value}}",
+      "addProduct": "Dodaj produkt",
+      "back": "Powrót",
+      "draftOrder": "Projekt zamówienia",
+      "leaveToastMessage": "Czy na pewno chcesz opuścić tę stronę?",
+      "leaveToastButton": "Opuścić",
+      "discardButton": "Odrzucić",
+      "completeOrderButton": "Zatwierdź projekt zamówienia",
+      "addTitle": "Dodaj pozycję do projektu zamówienia",
+      "viewTitle": "Pozycje w kolejności",
+      "editTitle": "Pozycje w kolejności",
+      "viewHeader": "Tutaj można sprawdzić kolejność elementów",
+      "editHeader": "Tutaj można aktualizować pozycje w kolejności",
+      "addHeader": "Tutaj można dodawać elementy do wersji roboczej zamówienia",
+      "updateAddItemToast": "Pozycja pomyślnie dodana do zamówienia",
+      "updateQuantityItemToast": "Pomyślnie zmieniono ilość artykułu w zamówieniu",
+      "searchHeader": "Produkt",
+      "searchPlaceholder": "Wpisz, aby wyszukać produkty...",
+      "product": "Produkt",
+      "slug": "Ślimak",
+      "preview": "Podgląd",
+      "id": "Id",
+      "actions": "Działania",
+      "noItemsFound": "Nie znaleziono żadnych elementów",
+      "cancel": "Anuluj",
+      "add": "Dodaj pozycję do zamówienia",
+      "update": "Aktualizacja pozycji w zamówieniu",
+      "addItem": " Dodaj element",
+      "somethingWrong": "Coś poszło nie tak",
+      "sku": "SKU",
+      "quantity": "Ilość",
+      "remove": "Usunąć",
+      "edit": "Edytuj",
+      "noItems": "Brak elementów w projekcie zamówienia",
+      "price": "Cena",
+      "priceWithTax": "Cena z podatkiem",
+      "totalWithTax": "Razem z podatkiem",
+      "customFields": "Pola niestandardowe",
+      "discount": "Rabat",
+      "orderCancelSuccessfully": "Zamówienie anulowane pomyślnie",
+      "modifyOrder": "Modyfikuj zamówienie",
+      "cancelOrder": "Anuluj zamówienie",
+      "realizeOrder": "Zrealizuj zamówienie",
+      "areYouSure": "Czy na pewno?",
+      "continue": "Kontynuować",
+      "cancelOrderMessage": "Po anulowaniu zamówienia żadne działanie nie będzie dozwolone",
+      "selectCustomer": {
+        "noCustomer": "Brak klienta",
+        "titleLabel": "Tytuł",
+        "firstNameLabel": "Imię",
+        "lastNameLabel": "Nazwisko",
+        "emailLabel": "Email",
+        "phoneNumberLabel": "Numer telefonu",
+        "select": "Klient",
+        "selectButton": "Wybierz klienta",
+        "change": "Zmień klienta",
+        "create": "Utwórz klienta",
+        "customer": "Klient",
+        "label": "Wybór klienta dla tego zamówienia",
+        "description": "Wybierz klienta z poniższej listy lub utwórz nowego",
+        "selectTab": "Wybierz klienta",
+        "createTab": "Utwórz nowego klienta",
+        "selectedCustomerText": " Wybrany klient:  ",
+        "close": "Zamknij",
+        "placeholder": "Wpisz, aby wyszukać klientów...",
+        "emptyState": "Nie znaleziono klientów",
+        "firstName": "Imię",
+        "lastName": "Nazwisko",
+        "email": "Email",
+        "phoneNumber": "Numer telefonu",
+        "id": "Id",
+        "inputLabel": "Aby znaleźć konkretnego klienta, użyj poniższego pola i wybierz żądany z poniższej listy",
+        "selectCustomerFailed": "Nie udało się wybrać klienta",
+        "success": "Klient dodany do zamówienia",
+        "error": "Nie udało się dodać klienta do zamówienia",
+        "noResults": "Nie znaleziono klienta o określonej wartości"
+      },
+      "notEnoughPayment": "Płatność nie jest wymagana",
+      "buttonAddPayment": "Dodaj płatność do zamówienia {{value}}",
+      "addPaymentTitle": "Dodaj płatność do zamówienia",
+      "addPaymentDescription": "Wybierz metodę płatności, aby sfinalizować zamówienie."
+    },
+    "discounts": {
+      "title": "Rabaty",
+      "description": "Rabaty na zamówienia",
+      "emptyState": "Nie zastosowano żadnych rabatów"
+    },
+    "form": {
+      "userError": "Nazwa użytkownika musi składać się z co najmniej 5 znaków.",
+      "emailError": "To nie jest prawidłowy adres e-mail.",
+      "requiredError": "Ta wartość jest wymagana",
+      "phoneError": "Nieprawidłowy format numeru telefonu",
+      "phoneRequiredError": "Numer telefonu jest wymagany",
+      "firstNameError": "Imię jest wymagane",
+      "lastNameError": "Nazwisko jest wymagane"
+    },
+    "selectAddress": {
+      "noShippingAddress": "Brak adresu wysyłki",
+      "noBillingAddress": "Brak adresu rozliczeniowego",
+      "nameRequired": "Pełna nazwa jest wymagana",
+      "streetRequired": "Ulica Linia 1 jest wymagana",
+      "cityRequired": "Nazwa miasta jest wymagana",
+      "postalCodeRequired": "Kod pocztowy jest wymagany",
+      "countryRequired": "Kraj jest wymagany",
+      "phoneNumberRequired": "Numer telefonu jest wymagany",
+      "shippingHeader": "Adres wysyłki",
+      "billingHeader": "Adres rozliczeniowy",
+      "shippingDescription": "Tutaj można ustawić adres wysyłki",
+      "billingDescription": "Tutaj można ustawić adres rozliczeniowy",
+      "changeShippingAddress": "Zmień adres wysyłki",
+      "selectShippingAddress": "Wybierz adres wysyłki",
+      "createShippingAddress": "Utwórz adres wysyłki",
+      "changeBillingAddress": "Zmiana adresu rozliczeniowego",
+      "selectBillingAddress": "Wybierz adres rozliczeniowy",
+      "createBillingAddress": "Utwórz adres rozliczeniowy",
+      "selectAddress": "Wybierz adres",
+      "createAddress": "Utwórz adres",
+      "editAddress": "Edytuj adres",
+      "addressSuccessCreateToast": "Adres utworzony pomyślnie",
+      "addressSuccessSelectToast": "Adres wybrany pomyślnie",
+      "addressFailedCreateToast": "Wybór adresu nie powiódł się",
+      "addressFailedSelectToast": "Tworzenie adresu nie powiodło się",
+      "newAddress": "Nowy adres: {{address}} dodany do konta użytkownika",
+      "addressAddFailed": "Nie udało się dodać nowego adresu do konta użytkownika",
+      "phoneError": "Nieprawidłowy format numeru telefonu",
+      "close": "Zamknij",
+      "setAsDefaultShipping": "Ustaw jako domyślny adres wysyłki",
+      "setAsDefaultBilling": "Ustaw jako domyślny adres rozliczeniowy",
+      "countrySelectLabel": " Kraj:",
+      "phoneNumberShort": "tel.{{value}}",
+      "isDefaultBilling": "Domyślny adres wysyłki",
+      "isDefaultShipping": "Domyślny adres rozliczeniowy",
+      "createForCustomer": "Utwórz dla klienta",
+      "inputNameLabel": "Imię i nazwisko",
+      "inputNamePlaceholder": "Imię i nazwisko",
+      "inputCompanyLabel": "Nazwa firmy",
+      "inputCompanyPlaceholder": "Nazwa firmy",
+      "inputPhoneLabel": "Numer telefonu",
+      "inputPhonePlaceholder": "Numer telefonu",
+      "inputPostalLabel": "Kod pocztowy",
+      "inputPostalPlaceholder": "Kod pocztowy",
+      "inputProvinceLabel": "Prowincja",
+      "inputProvincePlaceholder": "Prowincja",
+      "inputCityLabel": "Miasto",
+      "inputCityPlaceholder": "Miasto",
+      "inputStreetLabel": "Street Line 1",
+      "inputStreetPlaceholder": "Street Line 1",
+      "inputStreet2Label": "Street Line 2",
+      "inputStreet2Placeholder": "Street Line 2",
+      "inputTaxLabel": "Identyfikator podatkowy firmy",
+      "inputTaxPlaceholder": "Identyfikator podatkowy firmy"
+    },
+    "selectShipmentMethod": {
+      "noLines": "Wymagana jest co najmniej jedna pozycja",
+      "cardTitle": "Metoda wysyłki",
+      "cardDescription": "Wybierz metodę wysyłki",
+      "noSelected": "Nie wybrano metody wysyłki.",
+      "noSelectedTip": "Przed wybraniem metody wysyłki należy dodać produkty.",
+      "buttonLabel": "Ustaw metodę wysyłki",
+      "close": "Zamknij",
+      "save": "Zapisz",
+      "setMethodTitle": "Ustaw metodę wysyłki",
+      "setMethodDescription": "Wybierz metodę wysyłki",
+      "shippingAdded": "Metoda wysyłki została dodana pomyślnie",
+      "code": "Kod:",
+      "price": "Cena:",
+      "method": "Metoda:"
+    },
+    "inputs": {
+      "pickDate": "Wybierz datę"
+    },
+    "fulfillment": {
+      "completeOrderButton": "Kompletne zamówienie",
+      "completeDialogTitle": "Kompletne zamówienie",
+      "completeDialogDescription": "Wypełnij szczegóły realizacji",
+      "product": "Produkt",
+      "sku": "SKU",
+      "fulfilled": "Zrealizowano",
+      "onStockValue": "w magazynie {{value}}",
+      "emptyState": "Brak elementów w projekcie zamówienia",
+      "fulfill": "Wypełnij",
+      "handlers": {
+        "manual-fulfillment": {
+          "title": "Wypełnianie ręczne",
+          "description": "Ręczne wprowadzanie szczegółów realizacji",
+          "method": "Metoda",
+          "trackingCode": "Kod śledzenia"
+        }
+      }
+    },
+    "fullName": "Imię i nazwisko",
+    "company": "Firma",
+    "street1": "Street Line 1",
+    "street2": "Street Line 2",
+    "city": "Miasto",
+    "postalCode": "Kod pocztowy",
+    "country": "Kraj",
     "phoneNumber": "Numer telefonu",
     "type": "Typ",
     "totalWithTax": "Razem z podatkiem",
